# ChangeLog for app-backup/dar
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-backup/dar/ChangeLog,v 1.57 2014/04/26 00:35:51 rich0 Exp $

*dar-2.4.13 (26 Apr 2014)

  26 Apr 2014; Richard Freeman <rich0@gentoo.org> +dar-2.4.13.ebuild:
  bump - 508688

  01 Mar 2014; Michał Górny <mgorny@gentoo.org> dar-2.4.10.ebuild,
  dar-2.4.11.ebuild, dar-2.4.12.ebuild, dar-2.4.2.ebuild, dar-2.4.9.ebuild:
  Update libgcrypt dep to use slot :0.

*dar-2.4.12 (24 Jan 2014)

  24 Jan 2014; Richard Freeman <rich0@gentoo.org> +dar-2.4.12.ebuild:
  bump - 499108

*dar-2.4.11 (12 Nov 2013)

  12 Nov 2013; Richard Freeman <rich0@gentoo.org> +dar-2.4.11.ebuild:
  bump

  15 Apr 2013; Richard Freeman <rich0@gentoo.org> dar-2.4.10.ebuild:
  Add slot operator deps for latest version.

*dar-2.4.10 (11 Mar 2013)

  11 Mar 2013; Richard Freeman <rich0@gentoo.org> +dar-2.4.10.ebuild:
  bump - thanks to Joost Roeleveld for discovering/testing

  09 Mar 2013; Agostino Sarubbo <ago@gentoo.org> dar-2.4.9.ebuild:
  Stable for sparc, wrt bug #460176

  09 Mar 2013; Agostino Sarubbo <ago@gentoo.org> dar-2.4.9.ebuild:
  Stable for x86, wrt bug #460176

  09 Mar 2013; Agostino Sarubbo <ago@gentoo.org> dar-2.4.9.ebuild:
  Stable for ppc, wrt bug #460176

  03 Mar 2013; Richard Freeman <rich0@gentoo.org> dar-2.4.9.ebuild:
  amd64 stable

*dar-2.4.9 (03 Feb 2013)

  03 Feb 2013; Richard Freeman <rich0@gentoo.org> +dar-2.4.9.ebuild:
  Bump, and correct static support - 411733 and 372761.

  03 Feb 2013; Richard Freeman <rich0@gentoo.org> metadata.xml:
  Taking over maintenance.

  03 Feb 2013; Pacho Ramos <pacho@gentoo.org> -dar-2.3.11.ebuild,
  -dar-2.3.9.ebuild, -dar-2.4.0.ebuild, -files/dar-2.4.0-gcc.patch,
  metadata.xml:
  Cleanup due #22900

  08 Feb 2012; Fabian Groffen <grobian@gentoo.org> dar-2.4.2.ebuild:
  Fixed for Prefix, marked ~amd64-linux, thanks Massimo Burcheri in bug #399809

*dar-2.4.2 (04 Dec 2011)
