@@ -6,6 +6,7 @@ DIST dar-2.4.10.tar.gz 1760827 SHA256 c00111b60264d9ae957c8a2b80fe889ec8803b62b9
 DIST dar-2.4.11.tar.gz 1760715 SHA256 c15fd11cc339363c25cbf24594eaa571235e00de60b6034a7a58d299ed864a5f SHA512 b1fc364083158f235610cc1860eb63f7147b3f268f2c2d6ec3a36e3d2c1e2cbe21ea7fa4d7ee7a9bc5d6b0c5dacaa9a0fa448225be67edda7f04cb364a374d50 WHIRLPOOL 9f9c57b34ec82cea37d6dd64bc4ee23f7b221dd2e6e52bdd5ffe78f75834b069b9033b2716391fe3453505224af5c49514c989685c3ae8730e67c7cf57b541ab
 DIST dar-2.4.12.tar.gz 1799320 SHA256 6bc4bec5692f970d58a649905afeabc0b4a8e10c9604cd6d16e7205ef343cf55 SHA512 3d0123ae51c275daae1a13a6a1ebc51bf4587fbd95bf99615b9563e00762c6437a438f7a76124ea2f4990386acf6231f42e52a428fa052b144b91690d6943429 WHIRLPOOL 221d51b4125da1f005e962b33a6d685cc929af56e379327554a8254e34f57d25acd0cd3bf49514e704000062b514756be1a516704a11560149a2856bd776431d
 DIST dar-2.4.13.tar.gz 1799774 SHA256 f3b2c3c7ad615b76683f8cdb6d025576f4373c75b9e37a9f340536054350c97a SHA512 28308101f5d73b7bb7ea181fc1df129ea2be888404d301b156938f8cfc47ed1ed2819be058ce910795c937c8bc267305e7e080c2b80f81a18df95ab9cfb7ad07 WHIRLPOOL 6a4b67d6da717e98c3f55df1589055435c92b5849e5f2b337beae96f0c2651a8b99db2c745b6bd739232c156ed04b83d3fa6e208836081a77681bd02e14bc1d6
+DIST dar-2.4.17.tar.gz 1800050 SHA256 5d861c39698b77124680914741e1e40e7e9bedb3fcedc6df8d468e619479833c SHA512 9f991c2801948ca52cbd78222f0a7e807e157efba8f32349ab802b40e8fef10e01e39a5ee581ce5c770e50d69562800c5bfbd0229e2d5d679823d08a5ee31afe WHIRLPOOL cb65f558d70307335b7337154a0fa840935f740bab02ebb91c6904db8b33ac30af97f68befa979bf447aeb54ee4cc53bf49d996fef05d9233f7cdda405beb884
 DIST dar-2.4.2.tar.gz 1741695 SHA256 38fe1b324550d856fb58684a7e471d00afabeee54cf97ed7ae9c3cc67af26c33 SHA512 9c5c1dd7b562571744f3ebdf13d951053b9122679b9f82b5c424d6978cc45993d23304fb79a044063e3d711a4db46c804873cc3d92702c542fbe804d246cb896 WHIRLPOOL ec4d3097d41f7207df94889f4d2b46d7e716e24540942372008fbab6e01dd6617385cccef34e71665d710751b52a8da783ed17d616f86fd2a5597e79b36927d0
 DIST dar-2.4.9.tar.gz 1751738 SHA256 3d11159a290886dde968e16d36f32fa8640029708457bc87cc0da6d0eac71643 SHA512 9a9b972599747493694fd838bafaa690e70490b5c500f084f0d0225e93a54ce40d61bc495827519c88f6a94542b88a1be5d11e5a98e672abe8659364d1b4c51f WHIRLPOOL f700bf7bd393e6dc2cce11e7bc56af0f130ea3fb714de04617a940ec15d6174c06b7a1051eb9c6ffa7a0ec686b1f13c288af1b541d49b332932743d0d617b56b
 EBUILD dar-2.3.8.ebuild 1749 SHA256 e2d5959c255524d8c5b7abb2504aa3b7ed7bbd43a77f003aa44f4a3f1321810a SHA512 717a77ff8822d3f0338cdf03b7a0a5bcd9a7a67a4746eb24a97f9b695fd269a51a43317d3c67a1b065566ff973a71ea59ae13aa5f4fec2546384d965ee980ccd WHIRLPOOL 5b7465b0e97f286f9f0963ddfbcc62ad4812015b6ca3b68a262e5e7ecbec64b65715baa27d0afc90e124ef36dbd3d1e453d20a8474e8114a92b5b2dd5f1fe80d
@@ -13,14 +14,25 @@ EBUILD dar-2.4.10.ebuild 2087 SHA256 1045124804236674a4973abf05cf1f8a9ee1bc57a01
 EBUILD dar-2.4.11.ebuild 2087 SHA256 cac17cd1034dde66ad638a46ae2dbfc7fa324d36d7a9e14dfc49d37bee57437d SHA512 8adbc10a36f220a9014f30cf9d5124d62975d079bde4ad5a15ec9fa0205ff0a5160204da5e03750faceef1f0fe733cecbee4e280af95f130083c8ec678c7fc6b WHIRLPOOL 7cb1eca4d17ebff1721e11174d9cadf790b6f49e0b465747237224059a06670728e298af676dbfdc1b8865635d73ab088db947a15cb7061624301cf0d6b2d54f
 EBUILD dar-2.4.12.ebuild 2087 SHA256 42c3cac4b199571f5a464b6cc89b1b3de22e32a6cc14dad85fc03b638903ece1 SHA512 f4bf59265bebe0c7ba545022c7be0f39e8f7621ce099f4942ac189c41039bf5207b32a5ef79950f006a4e1ab8b8dfa7339bec7e89d1b4c2c71bd9ca75beac590 WHIRLPOOL d8576dc156c77b86ce9a2900802f3f05541bdbb2add65ea85e2e8fa30667c35ba6727aa81cbe57e946be06692645f3b28fa324f13df9a385861277c5e07740c6
 EBUILD dar-2.4.13.ebuild 2086 SHA256 66000010773feb17d017cad25a46dd583089947ac71f342d6053c70be4dc29d4 SHA512 10ad5cca0d88d0deb73f534f80f78383da425310754c5342ff18cf074c19ff36b0d823d8cf2445da8d5962ac8271ce8e45a20641ba06777c5d65ff057d5b07e3 WHIRLPOOL 23608e7f8feeb4eba192fc62a901d69901cdaca6b7feb58f1bf8b3bb9bb632d70ef9df63baded53061c039acab8e24ccd3b27633de2e0a72e470d881f46172cb
+EBUILD dar-2.4.17.ebuild 2086 SHA256 5f4195256112cc1f3a71d0864ff373d5a17318c999e4a7c105953dbaa7f24f21 SHA512 dd4dbe51ea672d8d52316c324c4f3e90a2b5d958b44062e1521c80338e8220dd0eb78a7a13de3e1ca7a80933651f96e7704c100099c581bda71c02035b58849f WHIRLPOOL 7159de295d71fbce254fde371bf98e268d1cc00f2c8425c27cdfc6b526c431d747a93aff8f8e8c020503e0fb2969030caf687306977451a01947771895a934b6
 EBUILD dar-2.4.2.ebuild 1925 SHA256 eb3a20f79d84cb89d3f968c59e2c4811b77b4a9712acfe968c1c3c3fc7113601 SHA512 b083d608eb1bc3dfa70d54220ba6f4b4207c3f8c6c265d20b84d18057f38f437c616a98bacc640cd6ddfde671f1a917ac4ff3676bcacc5b31324524513d55d7e WHIRLPOOL 7aa1624f26318c6487d090cdac943f444e1bc600825fcdb30704a88ad99c14120b2cb605684592911c62097c6b3b29bfa62d9f3581eab6ec0412a129078dac39
 EBUILD dar-2.4.9.ebuild 2073 SHA256 525d59430299367a26c1b0c1073a8fd90ef993bb96f8a2352be292a8ef33ff5a SHA512 3af9e98dd03b30e8144094e7321de6a1d2a83f8c517856df6e459b90c39d36fa3cf61b76f1f21500f7167e99b9c3bd61fd9cffca9fcaece160fe90e30dd4fc0b WHIRLPOOL 171c182cc4483d677dd5f69a3d8d1440987aabad23e33c5d8a57c19f335640335026093a184857b76db6fd4be0ccd14de6a68519875c6caacb40984be4e67a89
-MISC ChangeLog 11088 SHA256 28fc47c589fa97979f3eb5752b3ab8d999c59e053aeb70225f9e46c1197a1f3e SHA512 3549d1a6704326f817e9151a36013e3384cca25a00bcb91110168ba4f6a458aee9d32c3ef8f26df998a633721e683512d2b96171a429aefe245ba422bc586aab WHIRLPOOL 6a64abfb993a88896b09d53ffd686504d68f02f3786deb4535fb4c853b2db9f5ec4d20ec67050c559c9f4477210f8319144b556c89d9debe00eb1a057325f055
+MISC ChangeLog 11202 SHA256 818c6b597535e72f398c1bbce76135fcf1def8a88beff2f83bd6e25895b9abbf SHA512 ed96972073137121484f45224fb57510b5667c945cf628b109fe9f551dcb9523fdcdc69ca99a8aadbfff4831cafbe136c6cd1b7d04ab21243356149b24788d20 WHIRLPOOL fc16492bc2f9c63b3f113f761627fc91e3fa32f22b57dcee4b9406dc7f8f356d52bb7038f23369462fb6642af7778f575f9bfc53e42fd22b4a28cf28b0030ce8
 MISC metadata.xml 719 SHA256 cbd3ab583dd68e280034698bdc3d139983f7a46f0676089751840a2ed0ce9d8c SHA512 4e60e54ef0ca2040ea0f907a4b3e6a65b7081e70a3b7957c4155b829d234d17686211a5f6a6af690d655ced084a32fd5cadd8ede1656677585fe189978fb167a WHIRLPOOL d70ed97a5d0433b0c33b2ccbc52cf5df89d2892cc473478211ec17f4ecb4dd0caa3662c3cdbf873c97a289924580798c1cdd05b4492b2246d8198801b2d72b6f
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iF4EAREIAAYFAlNa/2wACgkQCMFw3lXsEjqFngD/VS3zigNv/aK1hHL5JjmBqeKi
-9xIKRo6jhQ1QRCsT88sA/2prgFv5zBOa2e0HpCDf8ACjZyDoBih4gWedDiWAQcz7
-=vskZ
+iQIcBAEBCAAGBQJU1345AAoJEPnrMGeMBPQUwX4P/R54C/m4tRFyQYQe61PTDGTi
+RZI558XdMGVXGEKyWPQvOcPRGkXizUWZUE6OuGDtJ6dXNFHX3sQL6J9M5qgOg3gQ
+oUVKRmUG2s2n+tC3MZu1tV9UKcLlWfoe15ARBCpVCqbv0a6Zegz/zAZZQWIfbFYP
+HaNwpd0SwCUn9hopnY89XOQHP5Cp0kyZrBUbBBjZEprvzpnyzA2L4VLtpHYSORca
+zmBmRnTGilQIKtJXa6HOAHH9691obwefUL6fduQaiH2ygdSs9YGibBUTa0LeIiUh
+06LXrSNahJ+SZtAOmSKXhUwqrI8l8fYVeqHfZsGp4Q+1FlFKsIPxp1t5GfXbkZxT
+wVl6S9+djkelPo5n2MCJjXKuluO7ZiBw2DbehnpLGMb1y7apPy++C3T3unTCXBal
+ZdDkKK+Yf2CgboLRjoWAWjhZTAv3AsisV4dBC4wDKm28BnNRuHVitWltpf+j/sxb
+seHFCgMq8jPKHys3dvCtTHI5HeV5CXMOiJJv1ZRwfWCaOC0T6vyC5/owgt6zUBWZ
+7LctlS8evvA2/i+PzP5GgNQyZ1hneHQVJPlJfRHJpuuaCht8WQ6Am5ch2gLbfGF4
+gcOvkmBefMOM5b9rQIULsBdSSpVyZu5EerbvuzGgqL0eoaKr8cSPYPOg37qb+Av8
+UKRRA9Bm07AHqgSr3yhk
+=On9+
 -----END PGP SIGNATURE-----
